feat: search spots widget
