# src/widgets/search-spots-widget/api/search-spots-endpoint.ts
@@ -1,0 +1,27 @@
+import { GET } from "../../../shared/api";
+import { components } from "../../../shared/api/v1-prealpha";
+
+interface SearchProps {
+
+    queryText: string;
+    activities?: components['schemas']['ActivityTypes'][];
+}
+
+export const SearchSpots = async ({ queryText, activities }: SearchProps): Promise<components['schemas']['SearchSpotsResponse'] | undefined> => {
+
+    const response = await GET('/api/v1-prealpha/spots', {
+        params: {
+            query: {
+                q: queryText,
+                activities: activities
+            }
+        }
+    });
+
+    if (response.error) {
+        throw response.error;
+    }
+
+    const data = response.data;
+    return data;
+}
