# src/widgets/search-spots-widget/model/spot.ts
@@ -1,0 +1,7 @@
+import { components } from "../../../shared/api/v1-prealpha";
+
+export interface Spot {
+    Id: string,
+    Title: string,
+    Activities: components['schemas']['ActivityTypes'][]
+}
